# salaries-tech

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  dump.sql  firebase.json  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml  pr_checks.yml
alembic/: env.py
alembic/versions/: 085286c20bf8_initial_migration.py  155b5bc13fa8_update_tags.py  5716b9a71f45_update.py  61949985718c_add_salary_indexes.py  6ffdec72294a_fix_auto_increment.py  9146e9ec5f02_init.py  9b06b77e38ee_create_initial_tables.py  a5bae34b81f1_initial_migration.py  b8fd849fb4ca_initial_migration.py  f739c08376b6_update_company_name_nullable.py  fecdac2bb7ef_add_more_indexes.py
backend/: salaries.db  salaries.db-wal  salaries_dev_data.db  test.db
backend/api/: database.py  main.py  models.py  tools.py
backend/api/config/: env.py
backend/api/models/: __init__.py  company.py  job.py  salary.py  technical_stack.py
backend/api/routes/: auth.py  commons.py  companies.py  jobs.py  root.py  salaries.py  technical_stacks.py
backend/api/services/: auth.py  email.py  recaptcha.py
backend/api/tools/: text.py
backend/sync/: data.json  libsql_dialect.py  mapping_20241012172351.txt  populate_db.py  skipped_salaries.json  update_company_info.py
backend/tests/: .env.test  conftest.py  test_database.py  test_main.py  test_models.py  test_routes.py  test_tools.py
backend/tests/models/: test_job.py  (+3 more)
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
(+32 files in other folders)
